[package]
name = "wasm-geojson-validation"
version = "0.1.0"
authors = ["Andrew J. Pierce <andrewp@spaceflightindustries.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.2"
geojson = "0.12"
serde = "^1.0.59"
serde_derive = "^1.0.59"
serde_json = "1.0"
time = "*"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.1", optional = true }
